bug 840881 - apply widget's default scale factor in widget/gtk2/nsWindow move & resize methods. r=roc